more service rework